ADD: photo list placeholder view

--- a/FlickrApp/FlickrApp/Resources/en.lproj/Localizable.strings
+++ b/FlickrApp/FlickrApp/Resources/en.lproj/Localizable.strings
@@ -17,3 +17,4 @@
 "serviceUnavailable" = "Service currently unavailable";
 "photoNotFound" = "Photo not found";
 "unknownUserError" = "Unknown user";
+"noPhoto" = "Empty list";
